[package]
name = "port_cat"
version = "0.1.0"
edition = "2024"
authors = ["Guangyu He <me@heguangyu.net>"]
license = "MIT"
description = "A simple CLI tool to test connectivity to or scan ports on a remote host."
repository = "https://github.com/guangyu-he/port_cat"
readme = "README.md"
keywords = ["port", "scanner", "connectivity", "cli"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"

